--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -9,7 +9,7 @@ jobs:
       - name: use node.js
         uses: actions/setup-node@v3
       - run: npm install
-      - run: npm un build
+      - run: npm run build
   test:
     needs: hello-world-job
     runs-on: ubuntu-latest
@@ -28,3 +28,42 @@ jobs:
           fi
       - run: npm test
         continue-on-error: true
+  deploy:
+    needs: test
+    
+    permissions:
+      contents: write
+      pages: write     
+      id-token: write
+      
+    environment:
+      name: Production
+      url: ${{ steps.deployment.outputs.page_url }}
+      
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: use node.js
+        uses: actions/setup-node@v3
+      
+      - name: configure github pages
+        uses: actions/configure-pages@v3
+        with:
+          static_site_generator: next
+
+      - run: npm install
+      - run: npm run build
+
+      - name: upload artifacts
+        uses: actions/upload-pages-artifact@v3
+        with: 
+          path: "./out"
+
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
